--- a/usr/templates/multiverse/index.html
+++ b/usr/templates/multiverse/index.html
@@ -184,6 +184,8 @@
                         </div>
                         <p>若所有操作都没有结果，可以尝试点击<a id="btnUpdateToken" class="tooltip" title="不要频繁点哦"
                                 href="javascript: doUpdateToken();">这里</a>以手动更新 Token 状态。</p>
+                        <button id="btnSyncBookmarksNow" class="primary tooltip" title="立即同步一次全部收藏并在完成后发送 webhook"
+                            onclick="javascript: doBookmarkSyncNow();">立即同步收藏</button>
                     </section>
                 </div>
                 <div class="filters">
